# AOOMTest

./: AOOMComposite_fp.glsl  AOOMComposite_vp.glsl  AOOMFilterOpacity_fp.glsl  AOOMFilterOpacity_vp.glsl  AOOMGraphics.cpp  AOOMGraphics.h  AOOMOpacityProjection_fp.glsl  AOOMOpacityProjection_vp.glsl  AOOMTest.bat  AOOMTest.cpp  AOOMTest_laptop.bat  AOOM_fp.glsl  AOOM_vp.glsl  CMakeLists.txt  README.md  balls_fp.glsl  balls_vp.glsl  perPixelLighting_fp.glsl
data/: 1aua.info  1kbb.info  Copro_III_Oxidase.info  Copro_III_Oxidase_Monomer.info  Copro_III_Oxidase_Monomer_Section.info  PBG_Deaminase.info  PBG_Synthase.info  URO_III_Decarboxylase.info  URO_III_Synthase.info  Yeast.info  pdb1aua_improved.info  pdb1aua_improved_color.info  sfh1_PC_PI.info  sfh1_PC_PI_clarify.info  sfh1_PC_PI_clarify_FROMVRML.info  sfh1_PC_PI_clarify_TESTBALLS.info  sfh1_PC_PI_color.info
data/Molecules/: PBG_Deaminase.mtl  PBG_Deaminase.vrml  PBG_Deaminase.x3d  PBG_Synthase.mtl  PBG_Synthase.vrml  PBG_Synthase.x3d
data/Surfaces/: AOGen.bat  CleanOBJ.bat  CleanOBJ.py  OBJPerVertexColor.bat  README.txt  TODO.txt  VRML2OBJ.bat  VRML2OBJ.py  ViewOBJ.py
data/Surfaces/1aua/: 1aua.pvc  1aua_Clean.obj.vtk  1aua_Clean.objForEric.mtl  1aua_Clean_AO.xml  1aua_Clean_AO.xml.vtk
data/Surfaces/1kbb/: 1kbb.pvc  1kbb_Clean_AO.xml  1kbb_Clean_AO.xml.vtk  README
data/Surfaces/Copro_III_Oxidase/: Copro_III_Oxidase.pvc  Copro_III_Oxidase_Monomer.pvc  Copro_III_Oxidase_Monomer_Clean_AO.xml  Copro_III_Oxidase_Monomer_Section.pvc  Copro_III_Oxidase_Monomer_Section.wrl  Copro_III_Oxidase_Monomer_Section_Clean_AO.xml
data/Surfaces/PBG_Deaminase/: PBG_Deaminase.pvc  PBG_Deaminase_Clean_AO.xml  PBG_Deaminase_Clean_Surface.obj.vtk  PBG_Deaminase_Clean_Surface.objForEric.mtl
data/Surfaces/PBG_Synthase/: PBG_Synthase.pvc  PBG_Synthase_Clean_AO.xml
data/Surfaces/URO_III_Decarboxylase/: URO_III_Decarboxylase.pvc  URO_III_Decarboxylase_Clean_AO.xml
(+14 files in other folders)
